[package]
name = "datamining-worker"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.28.2", features = ["macros"] }
serde_json =  "1.0.96"
vercel_runtime = "1.0.2"
http = "0.2.9"
serde = { version = "1.0.163", features = ["derive"] }
rand = "0.8.5"
regex = "1.8.4"
once_cell = "1.18.0"
reqwest = { version = "0.11.18", features = ["json"] }
itertools = "0.10.5"

[lib]
path = "src-rs/lib.rs"

[[bin]]
name = "index"
path = "api/index.rs"
